Asset management service and page done 9 jan

--- a/backend/notification-service/.env
+++ b/backend/notification-service/.env
@@ -6,9 +6,9 @@ SERVICE_NAME=notification-service
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=gocarbonpositive
+DB_NAME=Co2 plus
 DB_USER=postgres
-DB_PASSWORD=database2003
+DB_PASSWORD=amir123
 
 # Auth Service
 AUTH_SERVICE_URL=http://localhost:5000
